ddep1 - basic rolling working.

--- a/_ddep/1.md
+++ b/_ddep/1.md
@@ -10,7 +10,32 @@ My choice to use React was troublesome. I can't easily fit a build step into
 jekyll in a way that github pages would honor, so I need to run react with 
 without babel.
 
-There is [an in browser version of babel](https://github.com/babel/babel-standalone). It will be slow but fine for small one day projects like these. 
-[now part of bable](https://github.com/babel/babel/tree/master/packages/babel-standalone).
+There is [an in browser version of 
+babel](https://github.com/babel/babel-standalone). It will be slow but fine for 
+small one day projects like these. [now part of 
+bable](https://github.com/babel/babel/tree/master/packages/babel-standalone).
 
-This [gist](https://gist.github.com/kentcdodds/5274dfa1eb31e6d22b9eddd1efc773dc) guided the way for how to get this working. 
+This 
+[gist](https://gist.github.com/kentcdodds/5274dfa1eb31e6d22b9eddd1efc773dc) 
+guided the way for how to get this working.
+
+Okay, now that I have the boilerplate working, I should begin to work on design. 
+
+The main goal is something that resolves several random tables quickley. Today 
+some things may be hard coded, but later I will set it up to accept the tables 
+in a json format or something. It is going to be based on "Stocking A Dungeon" 
+Section of "Dungeon Master's Guide" (5e). Those tables aren't open content, so 
+I'm going to use the same format but make my own tables. 
+
+Each room has 
+1. Purpose - what the room is used for, like kitchen or armory. It's rolled off a table based on the purpose of the dungeon. 
+2. State - What kind of damage time and wandering creaturs have done to the room. One table. 
+3. Contents - Monster, Treasure, Traps. This is where it gets interesting, because most of these options branch to different rolls on sub tables. 
+
+I think nested react components are the best way to do this. 
+
+I initialy planned to have a TableRoll component and subclass it to make 
+specific tables, but [React reccomends against 
+inheritance](https://reactjs.org/docs/composition-vs-inheritance.html).
+
+Having trouble with getting it to update from a button.
