ddep1 added more tables, clean up. Final report.

--- a/_ddep/1.md
+++ b/_ddep/1.md
@@ -1,8 +1,8 @@
 ---
 serial: 1
 name: Random Table
-status: INCOMPLETE
-goal: Webapp that rolls random tables provided in JSON
+status: SUCCESS
+goal: Webapp that rolls random tables.
 date: 2018-05-01
 ---
 
@@ -39,3 +39,7 @@ specific tables, but [React reccomends against
 inheritance](https://reactjs.org/docs/composition-vs-inheritance.html).
 
 Having trouble with getting it to update from a button.
+
+Got distracted for a bit, I'm going to scale it back so I can consider it finished today. Dropping the selection. Might still do Subtables. 
+
+I didn't get it doing everything I wanted but it does something and I reinforced y knowledge of react design patterns. Calling it a success.
