ddep-2 Added storage, finished.

--- a/_ddep/2.md
+++ b/_ddep/2.md
@@ -1,7 +1,7 @@
 ---
 serial: 2
 name: Rearrange
-status: INCOMPLETE
+status: SUCCESS
 goal: Persistent rearrangeable content. 
 date: 2018-04-16
 ---
@@ -16,6 +16,10 @@ I'm going to try to work out a solution with just what I know before googling it
 
 lets go with a css grid. 
 
+turned out that ther presistence was much simpler than the draggin itself. 
+
+This all took only about 3 hours. 
+
 Pages Referenced: 
 https://reactjs.org/docs/react-dom.html#render
 https://reactjs.org/docs/react-component.html#render
@@ -23,3 +27,5 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_
 https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API/Drag_operations
 https://developer.mozilla.org/en-US/docs/Web/Events/dragover
     This example is doing a very similar thing. It's changing the parent instead of using grid properties though.
+https://developer.mozilla.org/en-US/docs/Web/API/Storage/LocalStorage
+https://stackoverflow.com/questions/29797946/handling-bad-json-parse-in-node-safely/29798770
